[package]
name = "aibe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bn = { package = "zeropool-bn", version = "0.5.12", default-features = false, features = ["borsh"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = {version = "0.8.5", default-features = false}
sha2 = { version = "0.10.2", default-features = false }
borsh = { version = '0.9.1', default-features = false }
base64 = { default-features = false, version = '0.13.0', features=["alloc"] }
# libm is necessary for us to build a no-std crate, because it enables `sqrt` which is not available on core::primitives::f64
libm = { version = '0.2.2', default-features = false }


[features]
default = ["std"]
std = ["rand/std", "rand/std_rng"]

[patch]
[patch.crates-io]
bn = {package = "zeropool-bn", path = "../bn"}
