[package]
name = "faceless-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "faceless-node"

[dependencies]
clap = { version = "4", features = ["derive"] }

sc-cli = { package = "sc-cli", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", features = ["wasmtime"] }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-executor = { package = "sc-executor", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", features = ["wasmtime"]  }
sc-service = { package = "sc-service", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", features = ["wasmtime"]  }
sc-telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-keystore = { package = "sc-keystore", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-transaction-pool = { package = "sc-transaction-pool", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-transaction-pool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-aura = { package = "sc-consensus-aura", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-consensus-aura = { package = "sp-consensus-aura", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus = { package = "sc-consensus", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-manual-seal" , branch = "polkadot-v0.9.32" }
sc-finality-grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-finality-grandpa = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-client-api = { package = "sc-client-api", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-timestamp = { package = "sp-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-transaction-payment = { package = "pallet-transaction-payment", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { package = "sc-rpc", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-api = { package = "sp-api", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-rpc-api = { package = "sc-rpc-api", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-blockchain = { package = "sp-blockchain", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-block-builder = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-basic-authorship = { package = "sc-basic-authorship", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
substrate-frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-transaction-payment-rpc = { package = "pallet-transaction-payment-rpc", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-benchmarking-cli = { package = "frame-benchmarking-cli", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# Local Dependencies
faceless-node-runtime = { version = "4.0.0-dev", path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { package = "try-runtime-cli", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[build-dependencies]
substrate-build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = []
runtime-benchmarks = ["faceless-node-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["faceless-node-runtime/try-runtime", "try-runtime-cli"]
