[package]
name = "faceless-node-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

pallet-authorship = { git = "https://github.com/paritytech/substrate", package = "pallet-authorship", default-features = false , branch = "polkadot-v0.9.32" }
pallet-assets = { git = "https://github.com/paritytech/substrate", package = "pallet-assets", default-features = false, branch = "polkadot-v0.9.32" }
pallet-balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false , branch = "polkadot-v0.9.32" }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false , branch = "polkadot-v0.9.32" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", package = "pallet-randomness-collective-flip", default-features = false , branch = "polkadot-v0.9.32" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", package = "pallet-sudo", default-features = false , branch = "polkadot-v0.9.32" }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false , branch = "polkadot-v0.9.32" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false , branch = "polkadot-v0.9.32" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment", default-features = false , branch = "polkadot-v0.9.32" }
frame-executive = { git = "https://github.com/paritytech/substrate", package = "frame-executive", default-features = false , branch = "polkadot-v0.9.32" }
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false , branch = "polkadot-v0.9.32" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", package = "sp-block-builder", default-features = false , branch = "polkadot-v0.9.32" }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false , branch = "polkadot-v0.9.32" }
sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents", default-features = false , branch = "polkadot-v0.9.32" }
sp-offchain = { git = "https://github.com/paritytech/substrate", package = "sp-offchain", default-features = false , branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false , branch = "polkadot-v0.9.32" }
sp-session = { git = "https://github.com/paritytech/substrate", package = "sp-session", default-features = false , branch = "polkadot-v0.9.32" }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false , branch = "polkadot-v0.9.32" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sp-transaction-pool", default-features = false , branch = "polkadot-v0.9.32" }
sp-version = { git = "https://github.com/paritytech/substrate", package = "sp-version", default-features = false , branch = "polkadot-v0.9.32" }

pallet-aura = { package = "pallet-aura", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-grandpa = { package = "pallet-grandpa", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-try-runtime = { package = "frame-try-runtime", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", optional = true }
sp-consensus-aura = { package = "sp-consensus-aura", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false, features = ["unstable-interface"], branch = "polkadot-v0.9.32" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false , branch = "polkadot-v0.9.32" }

# Chain extension
pallet-assets-chain-extension = { git = "https://github.com/Supercolony-net/pallet-assets-chain-extension", default-features = false, features = ["substrate"], branch = "polkadot-v0.9.32"  }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# Used for runtime benchmarking
frame-benchmarking = { package = "frame-benchmarking", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", optional = true }
frame-system-benchmarking = { package = "frame-system-benchmarking", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", optional = true }
hex-literal = { version = "0.3.4", optional = true }

# Local Dependencies
#pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }

#pallet-nicks = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32"}

pallet-faceless = { default-features = false, path = "../pallets/faceless"}

[build-dependencies]
substrate-wasm-builder = { package = "substrate-wasm-builder", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	#"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
    #"pallet-nicks/std",
    "pallet-faceless/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-assets/std",
	"pallet-assets-chain-extension/substrate-std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	#"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	#"pallet-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
