[package]
name = "pallet-faceless"
version = "4.0.0-dev"
description = "FRAME pallet faceless for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/zicofish/faceless/tree/master/faceless-substrate-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, package = "frame-support", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32"}
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-benchmarking = { default-features = false, package = "frame-benchmarking", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", optional = true }
sp-std = {default-features = false, package = "sp-std", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32"} 
bulletproofs = { path = "../../../bulletproofs", default-features = false }
getrandom = {version = "0.2.6", default-features = false, features = ['js']}
aibe = { path = "../../../aibe", default-features = false }
borsh = { version = '0.9.1', default-features = false }
base64 = { default-features = false, version = '0.13.0', features=["alloc"] }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, package = "sp-core", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, package = "sp-io", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, package = "sp-runtime", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
    "sp-std/std",
    #"bls_bulletproofs/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]


